<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="txvEmail">@realDonaldTrump</string>
    <string name="txvUserName">Donald J. Trump</string>
    <string name="action_home">Home</string>
    <string name="action_dependency">Dependencies</string>
    <string name="action_sector">Sectors</string>
    <string name="navview_subheader">Other options</string>
    <string name="action_help">Help</string>
    <string name="action_config">Settings</string>
    <string name="hello_blank_fragment_one">hello_blank_fragment_one</string>
    <string name="hello_blank_fragment_two">hello_blank_fragment_two</string>


</resources>
