<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/action_home"
            android:title="@string/action_home"
            android:icon="@drawable/action_home"
            />
        <item
            android:id="@+id/action_dependency"
            android:title="@string/action_dependency"
            android:icon="@drawable/action_dependency"
            />
        <item
            android:id="@+id/action_sector"
            android:title="@string/action_sector"
            android:icon="@drawable/action_sector"
            />
    </group>

    <!--Submenú-->
    <item android:id="@+id/navview_subheader"
        android:title="@string/navview_subheader">
        <menu>
            <item
                android:id="@+id/action_help"
                android:title="@string/action_help"
                android:icon="@drawable/action_help"
                />
            <item
                android:id="@+id/action_config"
                android:title="@string/action_config"
                android:icon="@drawable/action_settings"
                />
        </menu>
    </item>

</menu>